# ACT

./: .buildinfo  .gitignore  .travis.yml  ACT.yml  AUTHORS  CITATION.cff  CMakeLists.txt  CMakeLists.txt.rej  COPYING  GROMACS.md  INSTALL.md  README.md  TODO.md  USAGE.md  download+install.py  download_install_mac.py  genindex.html  get_todo.py  index.html  mac_install.sh  mkdocs.yml  objects.inv  references.html  requirements.txt  search.html  searchindex.js
.ci/: setup-ssh.sh  (+1 more)
docs/: CMakeLists.txt  README.md  conf-vars.py.cmakein  conf.py  conf_old.py  index.rst
docs/dev-manual/: build-system.rst  language-features.rst  overview.rst  relocatable-binaries.rst
docs/doxygen/: .gitignore  CMakeLists.txt  Doxyfile-common.cmakein  Doxyfile-compact  Doxyfile-version.cmakein  Doxyfile-xml.cmakein  RunDoxygen.cmake.cmakein  directories.cpp  doxygenxml.py  gmxtree.py  misc.cpp  suppressions.txt
docs/doxygen/lib/: logging.md  wrapperbinary.md
docs/doxygen/user/: mainpage.md
docs/install-guide/: index.rst
docs/manual/: CMakeLists.txt  conf-vars.py.cmakein  conf.py  index.rst  manual-refs.bib
docs/manual/code/: boltz.c++  evolve.c++  fitness.c++  genome.c++  rank.c++
docs/manual/devman/: doxygen.rst  header.rst
docs/manual/jupyter/: ACM-g.csv  ACM-pg.csv  EEM-without-shells.ipynb  SQE-without-shells.ipynb  charge_utils.py  header.rst  test_systems.py
docs/manual/preface/: about.rst  motivation.rst  tostart.rst
docs/manual/refman/: data.rst  energy.rst  ffdesign.rst  fitness.rst  sensitivity.rst  targets.rst  training.rst
docs/manual/userman/: installation.rst  properties.rst  simulation.rst  using.rst
docs/reference-manual/: algorithms.rst  file-formats.rst  special.rst
docs/reference-manual/special/: free-energy-implementation.rst
docs/stylesheets/: extra.css
docs/user-guide/: environment-variables.rst  mdp-options.rst  mdrun-performance.rst
share/: CMakeLists.txt  alexandria.csv  atom_bond.xml  atomization-energies-dft.csv  atomprops.csv  atomtype_mapping.csv  atomtypes.csv  atomtypes_gui.csv  atomtypes_nonpol.csv  atomtypes_pol.csv  atomtypes_same_zeta.csv  bondvsites.csv  elements.csv  symmetric_charges.csv  vsite2_halogen_sigma_holes.csv  vsite3_alcohol_bisector.csv  vsite3_alcohol_lone_pairs.csv  vsite3_water_bisector.csv  vsite4_amine.csv
share/forcefield/: alexandria.csv  atomtypes.csv  atomtypes_nonpol.csv  atomtypes_np.csv  bondvsites.csv  ffnames.csv  gt_bonds.xml
share/top/: atomtype_mapping.csv
src/act/alexandria/: CMakeLists.txt  README.md  acm_ga.cpp  acm_ga.h  acmfitnesscomputer.cpp  acmfitnesscomputer.h  acmindividual.cpp  acmindividual.h  acminitializer.cpp  acminitializer.h  acthelper.cpp  acthelper.h  actmiddleman.cpp  actmiddleman.h  actmol.cpp  actmol.h  actmol_low.cpp  actmol_low.h  alex_modules.cpp  alex_modules.h  alexandria.cpp  allbondeds.cpp  allbondeds.h  analyze.cpp  atype_mapping.cpp  atype_mapping.h  b2data.cpp  b2data.h  b2utils.cpp  b2utils.h  babel_io.cpp  babel_io.h  bastat.cpp  bayes.cpp  bayes.h  compound_reader.cpp  compound_reader.h  confighandler.cpp  confighandler.h  devcomputer.cpp  (+65 more)
src/act/python/: CMakeLists.txt  README.md  __init__.py  act.py  act_gct.py  act_openmm.py  actgui  atomic_heat_of_formation.py  coords2molprop  dimer_scan  dofit.py  donchev2molprop  elements.py  gaff_to_alexandria.py  gauss2molprop.cmakein  generate_ff.cmakein  generate_mp.cmakein  get_csv_rows.py  get_mol_dict.py  install_act  mol_csv_api.py.cmakein  molprops.py  molselect.cmakein  molutils.py  ncia2molprop  ncia_reader_from_xyz.py  pdb2molprop  read_gaussian_log.py  reader_from_xyz.py  reshuffle_selection.cmakein  view_fitness  viewxvg  xvgutils.py
src/alexandria/: CMakeLists.txt  ConfigHandler.h  ParamHandler.h  acm_ga.cpp  acm_ga.h  acmfitnesscomputer.cpp  acmfitnesscomputer.h  acmindividual.cpp  acmindividual.h  acminitializer.cpp  acminitializer.h  act_checksum.cpp  acthelper.cpp  acthelper.h  actmiddleman.cpp  actmiddleman.h  alex_modules.cpp  alex_modules.h  alexandria.cpp  allbondeds.cpp  allbondeds.h  analyze.cpp  atype_mapping.cpp  atype_mapping.h  b2utils.cpp  b2utils.h  babel_io.cpp  babel_io.h  bastat.cpp  bayes.cpp  bayes.h  categories.cpp  categories.h  chargemodel.h  communication.cpp  communication.h  communicationrecord.cpp  communicationrecord.h  composition.cpp  composition.h  (+123 more)
src/alexandria/act/: alex_modules.h  babel_io.cpp  bastat.cpp  categories.cpp  chargemodel.h  merge_pd.cpp  molgen.cpp  molprop_csv.cpp  molprop_test.cpp  molprop_util.h  molselect.h  mymol_low.cpp  optparam.cpp  plistwrapper.cpp  plistwrapper.h  poldata_low.h  poldata_xml.cpp  poldata_xml.h  qgen_acm.cpp  readpsi4.cpp
src/alexandria/coulombintegrals/: CMakeLists.txt  DSlater_1S_2S.cpp  DSlater_1S_3S.cpp  DSlater_1S_5S.cpp  DSlater_2S_5S.cpp  DSlater_2S_6S.cpp  DSlater_3S_4S.cpp  DSlater_3S_5S.cpp  DSlater_5S_5S.cpp  Slater_1S_1S.cpp  Slater_1S_2S.cpp  Slater_2S_2S.cpp  Slater_2S_3S.cpp  Slater_2S_4S.cpp  Slater_3S_4S.cpp  Slater_4S_4S.cpp  Slater_4S_5S.cpp  Slater_5S_5S.cpp  Slater_6S_6S.cpp  coulombintegrals.h  gaussian_integrals.h
src/ga/: CMakeLists.txt  Crossover.cpp  Crossover.h  Dataset.h  FitnessComputer.cpp  FitnessComputer.h  GenePool.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Genome.cpp  Genome.h  Individual.h  Initializer.cpp  Initializer.h  Makefile  Mutator.cpp  Mutator.h  ProbabilityComputer.cpp  ProbabilityComputer.h  Selector.cpp  Selector.h  Sorter.cpp  Sorter.h  Terminator.cpp  Terminator.h  aliases.h  crossover.cpp  crossover.h  ga_helpers.cpp  ga_helpers.h  ga_includes.h  helpers.cpp  helpers.h  includes.h  main.cpp  main.h  selection.cpp  selection.h  test  test.cpp
src/python/: CMakeLists.txt  act.py  actutils.py  atomic_heat_of_formation.py  dofit.py  donchev2molprop  elements.py  gaff_to_alexandria.py  gauss2molprop.cmakein  generate_ff.cmakein  generate_ff.py.cmakein  generate_mp.cmakein  generate_mp.py.cmakein  get_csv_rows.py  get_mol_dict.py  install_act  jacobi.py  mol_csv_api.py.cmakein  molprops.py  molselect.cmakein  molutils.py  read_gaussian_log.py  reshuffle_selection  view_fitness  viewxvg
(+5477 files in other folders)
